Haskell/calture-of-newtype-instances/fixed/result2.log

Main2.hs:1:14: error: Unsupported extension: ApplyingVia
  |
1 | {-# LANGUAGE ApplyingVia #-}
  |              ^^^^^^^^^^^
